--- a/aws-buildspec.yaml
+++ b/aws-buildspec.yaml
@@ -2,9 +2,19 @@
 version: 0.2
 
 phases:
+  pre_build:
+    commands:
+      - echo 'Logging in to Amazon ECR...'
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
   build:
     commands:
-      - cd $CODEBUILD_SRC_DIR/ubuntu/standard/2.0
-      - docker build -t aws/codebuild/standard:2.0 .
-      - cd $CODEBUILD_SRC_DIR/al2/x86_64/standard/1.0
-      - docker build -t aws/codebuild/amazonlinux2-x86_64-standard:1.0 .
+#       - cd $CODEBUILD_SRC_DIR/ubuntu/standard/2.0
+#       - docker build -t aws/codebuild/standard:2.0 .
+      - cd $CODEBUILD_SRC_DIR/al2/x86_64/standard/2.0
+      - docker build -t aws/codebuild/amazonlinux2-x86_64-standard:2.0 .
+  post_build:
+    commands:
+      - echo Build completed on `date`
+      - echo Pushing the docker image...
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      
