--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,10 @@ jobs:
           #This is the official AWS CodeBuild Repo that you would fork from and merge in from.
           # We are calling this repo upstream as origin is your forked repo
           git remote add upstream https://github.com/aws/aws-codebuild-docker-images.git
-          git fetch 
+          git fetch -p
           # Now merge in upstream branch
-          git merge --no-edit upstream/master
+          git config pull.rebase true
+          git pull upstream/master
       - name: "Configure AWS Credentials"
         # You may pin to the exact commit or the version.
         # uses: aws-actions/configure-aws-credentials@e97d7fbc8e0e5af69631c13daa0f4b5a8d88165b
