--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           # We are calling this repo upstream as origin is your forked repo
           git fetch -p
           # Now merge in upstream branch
-          git pull https://github.com/aws/aws-codebuild-docker-images.git main
+          git pull https://github.com/aws/aws-codebuild-docker-images.git master
       - name: "Configure AWS Credentials"
         # You may pin to the exact commit or the version.
         # uses: aws-actions/configure-aws-credentials@e97d7fbc8e0e5af69631c13daa0f4b5a8d88165b
