--- a/aws-buildspec.yaml
+++ b/aws-buildspec.yaml
@@ -2,15 +2,10 @@ version: 0.2
 phases:
   build:
     commands:
-#       - cd $CODEBUILD_SRC_DIR/ubuntu/standard/2.0
-#       - docker build -t aws/codebuild/standard:2.0 .
       - cd $CODEBUILD_SRC_DIR/al2/x86_64/standard/2.0
-      - docker build https://github.com/awsrudy/aws-codebuild-docker-images.git#main:al2/x86_64/standard/2.0
-  post_build:
-    commands:
+      - docker build https://github.com/awsrudy/aws-codebuild-docker-images.git#main:al2/x86_64/standard/2.0:latest
       - echo 'Logging in to Amazon ECR...'
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - echo Build completed on `date`
       - echo Pushing the docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
-      
