--- a/aws-buildspec.yaml
+++ b/aws-buildspec.yaml
@@ -3,9 +3,10 @@ phases:
   build:
     commands:
       - cd $CODEBUILD_SRC_DIR/al2/x86_64/standard/2.0
-      - docker build https://github.com/awsrudy/aws-codebuild-docker-images.git#main:al2/x86_64/standard/2.0:latest
+      - docker build https://github.com/awsrudy/aws-codebuild-docker-images.git#main:al2/x86_64/standard/2.0
       - echo 'Logging in to Amazon ECR...'
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - echo Build completed on `date`
       - echo Pushing the docker image...
+      - docker tag 281879663531.dkr.ecr.us-east-1.amazonaws.com/awsrudy-dockerbuildimage-al2-x86_64-standard-2:latest
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
