--- a/aws-buildspec.yaml
+++ b/aws-buildspec.yaml
@@ -8,5 +8,5 @@ phases:
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - echo Build completed on `date`
       - echo Pushing the docker image...
-      - docker tag al2-x8664-standard-2:latest 281879663531.dkr.ecr.us-east-1.amazonaws.com/awsrudy-dockerbuildimage-al2-x86_64-standard-2:latest
+      - docker tag al2-x8664-standard-2:latest $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
