--- a/.github/workflows/image-updater.yaml
+++ b/.github/workflows/image-updater.yaml
@@ -32,6 +32,7 @@ jobs:
           path: hash-data.txt
       - name: Compare Master Branch Commit with Last Checked Commit
         run: |
+          rm hash-data.txt
           REMOTE_HASH=$(git ls-remote https://github.com/aws/aws-codebuild-docker-images.git refs/heads/master | cut -f 1 )
           LAST_HASH_KNOWN=$(cat hash-data.txt)
           if [[ ${REMOTE_HASH} == ${LAST_KNOWN_HASH} ]]; then
