--- a/.github/workflows/image-updater.yaml
+++ b/.github/workflows/image-updater.yaml
@@ -25,14 +25,13 @@ jobs:
         with:
           name: hash-data
           path: hash-data.txt
-      - name: Download Artifact with Last Checked Commit Hash
-        uses: actions/download-artifact@v2
-        with:
-          name: hash-data
-          path: hash-data.txt
+#       - name: Download Artifact with Last Checked Commit Hash
+#         uses: actions/download-artifact@v2
+#         with:
+#           name: hash-data
+#           path: hash-data.txt
       - name: Compare Master Branch Commit with Last Checked Commit
         run: |
-          rm hash-data.txt
           REMOTE_HASH=$(git ls-remote https://github.com/aws/aws-codebuild-docker-images.git refs/heads/master | cut -f 1 )
           LAST_HASH_KNOWN=$(cat hash-data.txt)
           if [[ ${REMOTE_HASH} == ${LAST_KNOWN_HASH} ]]; then
