--- a/.github/workflows/image-updater.yaml
+++ b/.github/workflows/image-updater.yaml
@@ -4,8 +4,8 @@ name: Update CodeBuild Images
 
 # This is what triggers the workflow
 on: 
-  schedule:
-    - cron: '0 0 * * *' # This will tell the workflow to run every day at midnight
+#   schedule:
+#     - cron: '0 0 * * *' # This will tell the workflow to run every day at midnight
 
 
   # Allows you to run this workflow manually from the Actions tab
@@ -16,27 +16,32 @@ jobs:
   check-for-changes:
     runs-on: ubuntu-latest
     steps:
-      - name: Download Artifact with Last Checked Commit Hash
-        uses: actions/download-artifact@v2
-        with:
-          name: hash-data
-          path: hash-data.txt
+#       - name: Download Artifact with Last Checked Commit Hash
+#         uses: actions/download-artifact@v2
+#         with:
+#           name: hash-data
+#           path: hash-data.txt
       - name: Compare Master Branch Commit with Last Checked Commit
         run: |
           REMOTE_HASH=$(git ls-remote https://github.com/aws/aws-codebuild-docker-images.git refs/heads/master | cut -f 1 )
-          LAST_HASH_KNOWN=$(cat hash-data.txt)
-          if [[ ${REMOTE_HASH} == ${LAST_KNOWN_HASH} ]]; then
-            echo "No changes, finishing job"
-            exit 0;
-          else
-            echo "SOMETHING IS DIFFERENT"
-          fi
+          #LAST_HASH_KNOWN=$(cat hash-data.txt)
+          #if [[ ${REMOTE_HASH} == ${LAST_KNOWN_HASH} ]]; then
+          #  echo "No changes, finishing job"
+          #  exit 0;
+          #else
+          #  echo "SOMETHING IS DIFFERENT"
+          #fi
           echo "${REMOTE_HASH}" > hash-data.txt
-      - name: Update Last Checked Commit Hash with Updated Hash
-        uses: actions/upload-artifact@v2
+      - name: Add to Cache
+        uses: actions/cache@v2.1.3
         with:
-          name: hash-data
-          path: hash-data.txt
+          path: ./hash-data.txt
+          key: REMOTE_HASH
+#       - name: Update Last Checked Commit Hash with Updated Hash
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: hash-data
+#           path: hash-data.txt
           
 #   trigger-code-build:
 #     needs:  check-for-changes
