--- a/.github/workflows/image-updater.yaml
+++ b/.github/workflows/image-updater.yaml
@@ -16,35 +16,30 @@ jobs:
   check-for-changes:
     runs-on: ubuntu-latest
     steps:
-#       - name: Download Artifact with Last Checked Commit Hash
-#         uses: actions/download-artifact@v2
-#         with:
-#           name: hash-data
-#           path: hash-data.txt
-#       - name: Compare Master Branch Commit with Last Checked Commit
-#         run: |
-#           REMOTE_HASH=$(git ls-remote https://github.com/aws/aws-codebuild-docker-images.git refs/heads/master | cut -f 1 )
-#           #LAST_HASH_KNOWN=$(cat hash-data.txt)
-#           #if [[ ${REMOTE_HASH} == ${LAST_KNOWN_HASH} ]]; then
-#           #  echo "No changes, finishing job"
-#           #  exit 0;
-#           #else
-#           #  echo "SOMETHING IS DIFFERENT"
-#           #fi
-#           echo "${REMOTE_HASH}" > hash-data.txt
       - name: Load Cache
         uses: actions/cache@v2.1.3
         with:
           path: ./hash-data.txt
           key: REMOTE_HASH
-      - name: What is in the cache
+      - name: Compare Master Branch Commit with Last Checked Commit
         run: |
-          cat ./hash-data.txt
-#       - name: Update Last Checked Commit Hash with Updated Hash
-#         uses: actions/upload-artifact@v2
-#         with:
-#           name: hash-data
-#           path: hash-data.txt
+          REMOTE_HASH=$(git ls-remote https://github.com/aws/aws-codebuild-docker-images.git refs/heads/master | cut -f 1 )
+          LAST_KNOWN_HASH=$(cat hash-data.txt)
+          echo "REMOTE_HASH=${REMOTE_HASH}"
+          echo "LAST_KNOWN_HASH=${LAST_KNOWN_HASH}
+          if [[ ${REMOTE_HASH} == ${LAST_KNOWN_HASH} ]]; then
+            echo "No changes, finishing job"
+            exit 0;
+          else
+            echo "SOMETHING IS DIFFERENT"
+          fi
+          echo "${REMOTE_HASH}" > hash-data.txt
+      - name: Update Cache
+        uses: actions/cache@v2.1.3
+        with:
+          path: ./hash-data.txt
+          key: REMOTE_HASH
+
           
 #   trigger-code-build:
 #     needs:  check-for-changes
