--- a/.github/workflows/image-updater.yaml
+++ b/.github/workflows/image-updater.yaml
@@ -26,7 +26,7 @@ jobs:
           REMOTE_HASH=$(git ls-remote https://github.com/aws/aws-codebuild-docker-images.git refs/heads/master | cut -f 1 )
           LAST_KNOWN_HASH=$(cat hash-data.txt)
           echo "REMOTE_HASH=${REMOTE_HASH}"
-          echo "LAST_KNOWN_HASH=${LAST_KNOWN_HASH}
+          echo "LAST_KNOWN_HASH=${LAST_KNOWN_HASH}"
           if [[ ${REMOTE_HASH} == ${LAST_KNOWN_HASH} ]]; then
             echo "::set-output name=new_commits::false"
           else
