--- a/.github/workflows/image-updater.yaml
+++ b/.github/workflows/image-updater.yaml
@@ -32,12 +32,12 @@ jobs:
           else
             echo "::set-output name=new_commits::true"
           fi
-            echo "${REMOTE_HASH}" > hash-data.txt
-#       - name: Update Cache
-#         uses: actions/cache@v2.1.3
-#         with:
-#           path: ./hash-data.txt
-#           key: REMOTE_HASH
+            echo "TEST1" > hash-data.txt
+      - name: Update Cache
+        uses: actions/cache@v2.1.3
+        with:
+          path: ./hash-data.txt
+          key: REMOTE_HASH
     outputs:
       new_commits: ${{ steps.compare-last-known-hash-with-remote.outputs.new_commits }}
 
