--- a/.github/workflows/image-updater.yaml
+++ b/.github/workflows/image-updater.yaml
@@ -33,11 +33,11 @@ jobs:
             echo "::set-output name=new_commits::true"
           fi
             echo "TEST1" > hash-data.txt
-      - name: Update Cache
-        uses: actions/cache@v2.1.3
-        with:
-          path: ./hash-data.txt
-          key: REMOTE_HASH
+#       - name: Update Cache
+#         uses: actions/cache@v2.1.3
+#         with:
+#           path: ./hash-data.txt
+#           key: REMOTE_HASH
     outputs:
       new_commits: ${{ steps.compare-last-known-hash-with-remote.outputs.new_commits }}
 
