--- a/.github/workflows/image-updater.yaml
+++ b/.github/workflows/image-updater.yaml
@@ -6,8 +6,6 @@ name: Update CodeBuild Images
 on: 
 #   schedule:
 #     - cron: '0 0 * * *' # This will tell the workflow to run every day at midnight
-
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -19,6 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "Configure AWS Credentials"
+        id: configure-aws-credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           # AWS Access Key ID. This input is required if running in the GitHub hosted environment. It is optional if running in a self-hosted environment that already has AWS credentials, for example on an EC2 instance.
@@ -45,7 +44,7 @@ jobs:
           else
             echo "::set-output name=new_commits::true"
           fi
-            echo "TEST1" > ./LAST_KNOWN_HASH.txt
+            echo "${REMOTE_HASH}" > ./LAST_KNOWN_HASH.txt
       - name: Upload Latest Commit Hash to S3
         id: upload-latest-commit-hash-to-s3
         run: |
@@ -60,24 +59,25 @@ jobs:
     if: needs.check-for-changes.outputs.new_commits == 'true'
     runs-on: ubuntu-latest
     steps:
-#       - name: "Configure AWS Credentials"
-#         uses: aws-actions/configure-aws-credentials@v1
-#         with:
-#           # AWS Access Key ID. This input is required if running in the GitHub hosted environment. It is optional if running in a self-hosted environment that already has AWS credentials, for example on an EC2 instance.
-#           aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
-#           # AWS Secret Access Key. This input is required if running in the GitHub hosted environment. It is optional if running in a self-hosted environment that already has AWS credentials, for example on an EC2 instance.
-#           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-#           # AWS Region, e.g. us-east-2
-#           aws-region: us-east-1
-#           # Whether to set the AWS account ID for these credentials as a secret value, so that it is masked in logs. Valid values are 'true' and 'false'. Defaults to true
-#           mask-aws-account-id: true
-#       - name: Run CodeBuild
-#         uses: aws-actions/aws-codebuild-run-build@v1.0.3
-#         with:
-#           # AWS CodeBuild Project Name
-#           project-name: CodeBuildImageBuilder-AL2-x86_64-Standard
-        - name: TEST
-          run: |
-            echo "YAY, I'm running!
+      - name: "Configure AWS Credentials"
+        id: configure-aws-credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          # AWS Access Key ID. This input is required if running in the GitHub hosted environment. It is optional if running in a self-hosted environment that already has AWS credentials, for example on an EC2 instance.
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          # AWS Secret Access Key. This input is required if running in the GitHub hosted environment. It is optional if running in a self-hosted environment that already has AWS credentials, for example on an EC2 instance.
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          # AWS Region, e.g. us-east-2
+          aws-region: us-east-1
+          # Whether to set the AWS account ID for these credentials as a secret value, so that it is masked in logs. Valid values are 'true' and 'false'. Defaults to true
+          mask-aws-account-id: true
+      - name: Run CodeBuild
+        id: run-codebuild
+        uses: aws-actions/aws-codebuild-run-build@v1.0.3
+        with:
+          # AWS CodeBuild Project Name
+          project-name: CodeBuildImageBuilder-AL2-x86_64-Standard
+    outputs:
+      AWS_CODEBUILD_ID: ${{ steps.run-codebuild.outputs.aws-build-id }}  
         
           
